# pipescript

./: .gitattributes  .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
docs/: HISTORY.rst  LICENSE.txt
nbpipes/: __init__.py  _version.py  api.py  completion_patch.py  extract_names.py  macro_tracer.py  macros.py  nullish_tracer.py  pipeline_tracer.py  placeholders.py  utils.py  version.py
nbpipes/analysis/: extract_names.py  placeholders.py
nbpipes/api/: __init__.py  utils.py
nbpipes/tracers/: macro_tracer.py  optional_chaining_tracer.py  pipeline_tracer.py
pipescript/: __init__.py  __main__.py  _version.py  constants.py  extension.py  utils.py
pipescript/analysis/: dynamic_macros.py  extract_names.py  placeholders.py
pipescript/api/: __init__.py  macros.py  static_macros.py  utils.py
pipescript/patches/: completion_patch.py  diagnostics.py  traceback_patch.py
pipescript/tracers/: __init__.py  brace_block_tracer.py  macro_tracer.py  optional_chaining_tracer.py  pipeline_tracer.py
scripts/: blacken.sh  bump-version.py
test/: conftest.py  test_autodiff_integration.py  test_brace_block.py  test_diagnostics.py  test_dynamic_macros.py  test_no_prints.py  test_nullish_tracer.py  test_optional_chaining_tracer.py  test_pipeline_tracer.py  test_reexecution.py
