# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'python versioneer.py setup' after changing this section, and
# commit the resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = nbpipes/_version.py
versionfile_build = nbpipes/_version.py
tag_prefix =
parentdir_prefix = nbpipes-

[metadata]
name = nbpipes
history = file: docs/HISTORY.rst
description = Powerful pipeline syntax for IPython and Jupyter
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/smacke/nbpipes
author = Stephen Macke
author_email = stephen.macke@gmail.com
license = BSD-3-Clause
license_files = docs/LICENSE.txt
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14

[options]
zip_safe = False
packages = find:
platforms = any
python_requires = >= 3.9
install_requires =
    #ipyflow-core>=0.0.218
    #pyccolo>=0.0.75

[bdist_wheel]
universal = 1

[options.extras_require]
test =
    black
    hypothesis
    isort
    mypy
    pytest
    pytest-cov
    ruff
dev =
    build
    pycln
    twine
    versioneer
    %(test)s

[tool:pytest]
filterwarnings = ignore::DeprecationWarning

[mypy]
ignore_missing_imports = True

[mypy-nbpipes._version]
ignore_errors = True

